k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: 'nodeserver'
  labels:
    app: 'nodeserver'

spec:
  selector:
    matchLabels:
      app: nodeserver
  replicas: 3
  template:
    metadata:
      name: 'nodeserver'
      labels:
        app: 'nodeserver'
    spec:
      containers:
        - name: nodeserver
          image: 'henriqueholtz/nodeserver:latest'
          volumeMounts:
            - mountPath: '/appdevbuild/files' # path where app is running (container for example)
              name: configmapvol # Equals to volume name below

          #envFrom to select all from configMap
          #env to select individual keys
          # env:
          #   - name: name
          #     valueFrom:
          #       configMapKeyRef:
          #         name: nodeserver-env
          #         key: NAME
          #   - name: age
          #     valueFrom:
          #       configMapKeyRef:
          #         name: nodeserver-env
          #         key: AGE

      volumes:
        - name: configmapvol
          configMap:
            name: configmap-file
            items:
              - key: text
                path: 'readfile.txt'
