k8s/pod.yml
apiVersion: v1

kind: Pod
metadata:
  name: 'nodeserver'
  labels:
    app: 'nodeserver'
spec:
  containers:
    - name: nodeserver
      image: 'wesleywillians/hello-go:latest'
      # image: 'henriqueholtz/nodeserver:latest'
