k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 3
  # podManagementPolicy: parallel
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-h # Equals to ServiceName
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
