k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeserver-service
spec:
  selector:
    app: nodeserver
  type: ClusterIP
  ports:
    - name: nodeserver-service
      port: 80
      targetPort: 80
      protocol: TCP
      # nodePort: 30100 # expose all nodes with this port between 30000 and 32767
