k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: 'nginex'
  spec:
    rules:
      - host: 'ingress.fullcycle.com.br'
        http:
          paths:
            - pathType: Prefix
              path: '/'
              backend:
                serviceName: nodeserver-service
                servicePort: 3000
